src/objects/ADvendio__Ad_Specs__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__ADTECHCampaignInternalTiling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables campaign-internal tiling. If selected, the banners from this campaign will not be displayed together.</inlineHelpText>
        <label>ADTECH Campaign-internal tiling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ADTECH_Single_Placement_Flights__c</fullName>
        <defaultValue>false</defaultValue>
        <description>With this checkbox you can define if a separate flight is to be created for every companion ID.</description>
        <inlineHelpText>Create one Flight for every non-leading-placement?</inlineHelpText>
        <label>ADTECH Single Placement Flights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Ad_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field displays the ad type assigned to this ad spec.</description>
        <inlineHelpText>This field displays the ad type assigned to this ad spec.</inlineHelpText>
        <label>Ad Type</label>
        <referenceTo>ADvendio__Ad_Type__c</referenceTo>
        <relationshipLabel>Ad Specs</relationshipLabel>
        <relationshipName>Ad_Specs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__DescriptionOnPDF__c</fullName>
        <inlineHelpText>Der hier hinterlegte Text wird in den Dokumenten in den jeweiligen Positionsspalten mit angezeigt</inlineHelpText>
        <label>Description on PDF</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Distribution__c</fullName>
        <description>Define how the amount of product package is to be distributed among its components.</description>
        <inlineHelpText>Define how the amount of product package is to be distributed among its components.</inlineHelpText>
        <label>Distribution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Linear</fullName>
                </value>
                <value>
                    <fullName>Prorated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__External_Name__c</fullName>
        <description>Enter the ad spec&apos;s name for external use. This value will be displayed on the proposal.</description>
        <inlineHelpText>Enter the ad spec&apos;s name for external use. This value will be displayed on the proposal.</inlineHelpText>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FC_Ad_served_every__c</fullName>
        <description>Enter the amount of units for the FC. For example, for one day enter 1.</description>
        <inlineHelpText>Enter the amount of units for the FC. For example, for one day enter 1.</inlineHelpText>
        <label>FC Ad served every</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__FC_Period__c</fullName>
        <description>Choose the unit for the FC.</description>
        <inlineHelpText>Choose the unit for the FC.</inlineHelpText>
        <label>FC Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>minute</fullName>
                </value>
                <value>
                    <fullName>session</fullName>
                </value>
                <value>
                    <fullName>hour</fullName>
                </value>
                <value>
                    <fullName>day</fullName>
                </value>
                <value>
                    <fullName>week</fullName>
                </value>
                <value>
                    <fullName>month</fullName>
                </value>
                <value>
                    <fullName>year</fullName>
                </value>
                <value>
                    <fullName>campaign</fullName>
                </value>
                <value>
                    <fullName>browser</fullName>
                </value>
                <value>
                    <fullName>visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__FC_Quantity__c</fullName>
        <description>Enter the amount of impressions for this ad spec&apos;s FC.</description>
        <inlineHelpText>Enter the amount of impressions for this ad spec&apos;s FC.</inlineHelpText>
        <label>FC Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__FixedQuantityPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field marks if all Components have fixed Quantity.</description>
        <inlineHelpText>This field marks if all Components have fixed Quantity.</inlineHelpText>
        <label>Fixed Quantity Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Height__c</fullName>
        <description>Defines how many mm/inches the ad will use in height.</description>
        <inlineHelpText>Please enter how high the ad will be (in mm/inches).</inlineHelpText>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__KeyValues__c</fullName>
        <description>Here you can enter keys and values which are not shown on the documents and appear not in the Media Configuration.
This Informationen will be directly submitted to the AdServer at checking availability booking a MediaCampaign and there Campaign Items to the AdServer.</description>
        <inlineHelpText>Here you can enter keys and values which are not shown on the documents and appear not in the Media Configuration.
This Informationen will be directly submitted to the AdServer at checking availability, booking a Campaign Items to the AdServer.</inlineHelpText>
        <label>KeyValues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Keywords_Key_Values__c</fullName>
        <label>Keywords/Key-Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__LongDescription__c</fullName>
        <description>Enter a long / full description for this Ad Spec.</description>
        <inlineHelpText>Enter a long / full description for this Ad Spec.</inlineHelpText>
        <label>Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ADvendio__MaximumApplicabilityUnit__c</fullName>
        <description>This field is used to define if the Maximum Applicability should be used for days, weeks or months.</description>
        <inlineHelpText>This field is used to define if the Maximum Applicability should be used for days, weeks or months.</inlineHelpText>
        <label>Maximum Applicability Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MaximumApplicabilityUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MaximumApplicability__c</fullName>
        <label>Maximum Applicability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__NoAgencyComission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this checkbox to true, if you do not want to grant AC on this Ad Spec.</description>
        <inlineHelpText>Set this checkbox to true, if you do not want to grant AC on this Ad Spec.</inlineHelpText>
        <label>No Agency Comission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__NoThirdPartyCommission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this checkbox if you do not want to grant a third party commission for this Ad Spec.</description>
        <inlineHelpText>Set this checkbox if you do not want to grant a third party commission for this Ad Spec.</inlineHelpText>
        <label>No Third Party Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__No_Agency_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>With this checkbox you can define if agency discount is enabled for this ad spec. You also need an additional workflow.</description>
        <inlineHelpText>With this checkbox you can define if agency discount is enabled for this ad spec. You also need an additional workflow.</inlineHelpText>
        <label>No Agency Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__No_Customer_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>With this checkbox you can define if customer discount is enabled for this ad spec. You also need an additional workflow.</description>
        <inlineHelpText>With this checkbox you can define if customer discount is enabled for this ad spec. You also need an additional workflow.</inlineHelpText>
        <label>No Customer Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__No_Quantity_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>With this checkbox you can define if quantity discount is enabled for this ad spec. You also need an additional workflow.</description>
        <inlineHelpText>With this checkbox you can define if quantity discount is enabled for this ad spec. You also need an additional workflow.</inlineHelpText>
        <label>No Quantity Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__NumberOfColumns__c</fullName>
        <description>Defines how many columns the ad will use.</description>
        <inlineHelpText>Defines how many columns the ad will use.</inlineHelpText>
        <label>Number Of Columns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__OneFlightPerSize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In ADTECH we create one companion flight per AdSlotSize if checked.</description>
        <label>One Flight Per Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__OverbookingFactor__c</fullName>
        <description>Enter a percental overbooking factor if you wish transmit this ad spec&apos;s amount increased by a certain factor.</description>
        <inlineHelpText>Enter a percental overbooking factor if you wish transmit this ad spec&apos;s amount increased by a certain factor.</inlineHelpText>
        <label>Overbooking Factor</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Placement_Name__c</fullName>
        <formula>ADvendio__Site__c  &amp; &quot;_&quot; &amp; ADvendio__Placement__r.Name &amp; &quot;_&quot; &amp;  ADvendio__Ad_Type__r.Name</formula>
        <label>Placement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field displays the placement assigned to the ad spec.</description>
        <inlineHelpText>This field displays the placement assigned to the ad spec.</inlineHelpText>
        <label>Placement</label>
        <referenceTo>ADvendio__Placement__c</referenceTo>
        <relationshipLabel>Ad Specs</relationshipLabel>
        <relationshipName>Advertisement_products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Pricegroup__c</fullName>
        <inlineHelpText>Achtung diese Information wird unter anderem auch für die Inventarklassen verwendet. Weiterhin zur Massenpreisänderung.</inlineHelpText>
        <label>Pricegroup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price Pricegroup 1</fullName>
                </value>
                <value>
                    <fullName>Price Pricegroup 2</fullName>
                </value>
                <value>
                    <fullName>Price Pricegroup 3</fullName>
                </value>
                <value>
                    <fullName>Price Pricegroup 4</fullName>
                </value>
                <value>
                    <fullName>Price Pricegroup 5</fullName>
                </value>
                <value>
                    <fullName>Price Pricegroup 6</fullName>
                </value>
                <value>
                    <fullName>Price Pricegroup 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Product_key__c</fullName>
        <formula>ADvendio__Placement__r.ADvendio__Site__r.ADvendio__Title_KeyID__c  &amp;&quot;-&quot;&amp;  ADvendio__Placement__r.ADvendio__Placement_KeyID__c  &amp; &quot;-&quot; &amp;  ADvendio__Ad_Type__r.ADvendio__Ad_Type_KeyID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Product_search_Name__c</fullName>
        <description>Enter how this ad spec is to be displayed in the product search.</description>
        <inlineHelpText>Enter how this ad spec is to be displayed in the product search.</inlineHelpText>
        <label>Product search Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShortDescription__c</fullName>
        <description>Enter a short description for this Ad Spec. The text will be shown on the media search results page.</description>
        <inlineHelpText>Enter a short description for this Ad Spec. The text will be shown on the media search results page.</inlineHelpText>
        <label>Short Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Site__c</fullName>
        <description>This field displays the sites assigned to this ad spec.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; ADvendio__Placement__r.ADvendio__Site__r.Id , ADvendio__Placement__r.ADvendio__Site__r.Name)</formula>
        <inlineHelpText>This field displays the sites assigned to this ad spec.</inlineHelpText>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__TargetPlatform__c</fullName>
        <label>Target Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                    <default>true</default>
                    <label>Any</label>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Enter a UniqueKey (recommended: syntax) for this ad spec.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a UniqueKey (recommended: syntax) for this ad spec.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__UseExternalNameOnPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use External Name on PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATType__c</fullName>
        <inlineHelpText>Typ I - gibt den vollen Mehrwertsteuersatz an (Deutschland derzeit 19%, Austria derzeit 20
Typ II - gibt den verminderten Mehrwertsteuersatz an (Deutschland aktuell 7% usw.)</inlineHelpText>
        <label>VAT Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__VID__c</fullName>
        <description>VID is the unique identification of an ad spec.</description>
        <inlineHelpText>VID is the unique identification of an ad spec.</inlineHelpText>
        <label>VID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Width__c</fullName>
        <description>Defines how many mm/inches the ad will use in width.</description>
        <inlineHelpText>Please enter the width of the ad (in mm/inches).</inlineHelpText>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIG_PRODIAKEY_PRICE__c</fullName>
        <formula>ADvendio__Placement__r.ADvendio__Site__r.Mig_ProdiaKey__c &amp;&quot;_&quot; &amp;
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Standard-Umfeld&quot;), &quot;1&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Site-Rotation&quot;), &quot;2&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Network-Rotation&quot;), &quot;3&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Premium-Umfeld&quot;), &quot;4&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Themenrotation&quot;), &quot;5&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Rotation TV-Brand&quot;), &quot;6&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Rotation Max. Reach&quot;), &quot;7&quot;,
&quot;&quot;)))))))&amp;&quot;_&quot;&amp;RIGHT(Mig_ProdiaKey_Gebucht__c,  LEN(Mig_ProdiaKey_Gebucht__c) - FIND(&quot;_&quot;, Mig_ProdiaKey_Gebucht__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MIG_PRODIAKEY_PRICE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_Angebot2016__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mig_Angebot2016</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_CountAdPrices__c</fullName>
        <label>Mig_CountAdPrices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mig_Festplatzierung__c</fullName>
        <formula>AND( ADvendio__Ad_Type__r.SomDig_WbFaehig__c  = true, FIND(&quot;(WB)&quot;, ADvendio__Ad_Type__r.Name) &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_Festplatzierung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_Info__c</fullName>
        <description>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden
NOT_CHANGED: in ProDia und SF identisch, kein Update</description>
        <inlineHelpText>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden
NOT_CHANGED: in ProDia und SF identisch, kein Update</inlineHelpText>
        <label>Migration_Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_MOIPlacement__c</fullName>
        <formula>IF(SomDig_AbrechnungLeistungsevaluiert__c = true, ADvendio__Placement__r.Mig_ProdiaKey__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_MOIPlacement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_MOISite__c</fullName>
        <formula>IF(SomDig_AbrechnungLeistungsevaluiert__c = true,  ADvendio__Placement__r.ADvendio__Site__r.Mig_ProdiaKey__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_MOISite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_MgS_Name__c</fullName>
        <formula>ADvendio__Placement__r.SomDig_Mediagattungssegment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_MgS_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_PlacementCreatedBy__c</fullName>
        <formula>ADvendio__Placement__r.CreatedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_PlacementCreatedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_Preisgruppe1__c</fullName>
        <formula>IF(AND(SomDig_Rotationstyp__c=&apos;Umfeld&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;)),&apos;Preisgruppe 1&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Site-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;)),&apos;Preisgruppe 2&apos;,
IF(AND(ADvendio__Placement__r.ADvendio__Site__r.Mig_IsSpecialInterest__c ,AND(SomDig_Rotationstyp__c=&apos;Umfeld&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InApp/Mobile&apos;))),&apos;Preisgruppe 1&apos;,
IF(AND(ADvendio__Placement__r.ADvendio__Site__r.Mig_IsSpecialInterest__c, AND(SomDig_Rotationstyp__c=&apos;Site-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InApp/Mobile&apos;))),&apos;Preisgruppe 2&apos;,
IF(AND(ADvendio__Placement__r.ADvendio__Site__r.Mig_IsBrand__c ,AND(SomDig_Rotationstyp__c=&apos;Umfeld&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InApp/Mobile&apos;))),&apos;Preisgruppe 3&apos;,
IF(AND(ADvendio__Placement__r.ADvendio__Site__r.Mig_IsBrand__c, AND(SomDig_Rotationstyp__c=&apos;Site-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InApp/Mobile&apos;))),&apos;Preisgruppe 4&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Themen-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InApp/Mobile&apos;)),&apos;Preisgruppe 5&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;TV-Brand-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InApp/Mobile&apos;)),&apos;Preisgruppe 5&apos;,
&apos;&apos;
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_Preisgruppe1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_Preisgruppe2__c</fullName>
        <formula>IF(AND(SomDig_Rotationstyp__c=&apos;TV-Brand-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;)),&apos;Preisgruppe 2&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Brand-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;)),&apos;Preisgruppe 5&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Themen-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;)),&apos;Preisgruppe 6&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Network-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;)),&apos;Preisgruppe 7&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Umfeld&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;InApp/Mobile&apos;)),&apos;Preisgruppe 1&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Site-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;InApp/Mobile&apos;)),&apos;Preisgruppe 2&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;TV-Brand-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;InApp/Mobile&apos;)),&apos;Preisgruppe 5&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Brand-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;InApp/Mobile&apos;)),&apos;Preisgruppe 5&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Themen-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;InApp/Mobile&apos;)),&apos;Preisgruppe 6&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Site-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;Connected TV/HbbTv&apos;)),&apos;Preisgruppe 2&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;TV-Brand-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InStream/Video&apos;,Mig_MgS_Name__c=&apos;Connected TV/HbbTv&apos;)),&apos;Preisgruppe 5&apos;,
&apos;&apos;
)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_Preisgruppe2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_Preisgruppe3__c</fullName>
        <formula>IF(AND(ADvendio__Placement__r.ADvendio__Site__r.Mig_IsSpecialInterest__c ,AND(SomDig_Rotationstyp__c=&apos;Umfeld&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;))),&apos;Preisgruppe 1&apos;,
IF(AND(ADvendio__Placement__r.ADvendio__Site__r.Mig_IsSpecialInterest__c, AND(SomDig_Rotationstyp__c=&apos;Site-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;))),&apos;Preisgruppe 2&apos;,
IF(AND(ADvendio__Placement__r.ADvendio__Site__r.Mig_IsBrand__c , AND(SomDig_Rotationstyp__c=&apos;Umfeld&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;))),&apos;Preisgruppe 3&apos;,
IF(AND(ADvendio__Placement__r.ADvendio__Site__r.Mig_IsBrand__c , AND(SomDig_Rotationstyp__c=&apos;Site-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;))),&apos;Preisgruppe 4&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Themen-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;)),&apos;Preisgruppe 5&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;TV-Brand-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;)),&apos;Preisgruppe 5&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Network-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;InBrowser/Online&apos;)),&apos;Preisgruppe 7&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;Site-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;Connected TV/HbbTv&apos;)),&apos;Preisgruppe 4&apos;,
IF(AND(SomDig_Rotationstyp__c=&apos;TV-Brand-Rotation&apos;,AND(SomDig_MediagattungsDifferenzierung__c=&apos;InPage/Display&apos;,Mig_MgS_Name__c=&apos;Connected TV/HbbTv&apos;)),&apos;Preisgruppe 5&apos;,
&apos;&apos;
)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_Preisgruppe3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_ProDiaKey_Price_Aff__c</fullName>
        <formula>ADvendio__Placement__r.ADvendio__Site__r.SomDig_Werbetraergergruppierung__r.Mig_ProdiaKey__c  &amp;&quot;_&quot; &amp;
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Standard-Umfeld&quot;), &quot;1&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Site-Rotation&quot;), &quot;2&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Network-Rotation&quot;), &quot;3&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Premium-Umfeld&quot;), &quot;4&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Themenrotation&quot;), &quot;5&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Rotation TV-Brand&quot;), &quot;6&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Rotation Max. Reach&quot;), &quot;7&quot;,
&quot;&quot;)))))))&amp;&quot;_&quot;&amp;RIGHT(Mig_ProdiaKey_Gebucht__c,  LEN(Mig_ProdiaKey_Gebucht__c) - FIND(&quot;_&quot;, Mig_ProdiaKey_Gebucht__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_ProDiaKey_Price_Aff</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKeyKorrekt__c</fullName>
        <formula>Mig_ProdiaKey__c  =  Mig_ProdiaKeySoll__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_ProdiaKeyKorrekt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKeySoll__c</fullName>
        <formula>ADvendio__Placement__r.Mig_ProdiaKey__c &amp; &quot;_&quot;&amp; ADvendio__Ad_Type__r.Mig_ProdiaKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_ProdiaKeySoll</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey_ForPrice__c</fullName>
        <formula>ADvendio__Placement__r.ADvendio__Site__r.Mig_ProdiaKey__c &amp;&quot;_&quot; &amp;
ADvendio__Placement__r.Mig_ProdiaKey__c &amp;&quot;_&quot; &amp;
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Standard-Umfeld&quot;), &quot;1&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Site-Rotation&quot;), &quot;2&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Network-Rotation&quot;), &quot;3&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Premium-Umfeld&quot;), &quot;4&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Themenrotation&quot;), &quot;5&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Rotation TV-Brand&quot;), &quot;6&quot;,
IF(ISPICKVAL(SomDig_old_Rotationstyp__c, &quot;Rotation Max. Reach&quot;), &quot;7&quot;,
&quot;&quot;)))))))&amp;&quot;_&quot;&amp;ADvendio__Ad_Type__r.Mig_ProdiaKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig ProdiaKey_ForPrice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey_Gebucht__c</fullName>
        <label>Mig_ProdiaKey_Gebucht</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey__c</fullName>
        <description>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</description>
        <inlineHelpText>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</inlineHelpText>
        <label>Mig_ProdiaKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mig_Product_search_Name__c</fullName>
        <formula>ADvendio__Placement__r.ADvendio__Site__r.ADvendio__Product_search_Name__c &amp;&quot;_&quot; &amp;
ADvendio__Placement__r.ADvendio__Product_search_Name__c &amp;&quot;_&quot; &amp;
ADvendio__Ad_Type__r.ADvendio__Product_search_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_Product_search_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_RateCategory__c</fullName>
        <label>Mig_RateCategory</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_Site_Mig_ProdiaKeykomma__c</fullName>
        <formula>&apos;,&apos;&amp;ADvendio__Placement__r.ADvendio__Site__r.Mig_ProdiaKey__c&amp;&apos;,&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_Site_Mig_ProdiaKeykomma</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_VAbfrage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mig_VAbfrage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_AbrechnungLeistungsevaluiert__c</fullName>
        <description>Hilfsfeld um die Werbemittel zu markieren, welche in der Rechnungsstellung anhand Leistungswerte abgerechnet werde (ist für das Billing-Tool notwendig). Identifikation erfolgt anhand Datensatztyp der verlinkten Werbeform, ob diese &apos;DFP&apos; ist.</description>
        <formula>ADvendio__Ad_Type__r.RecordType.Name = &quot;DFP&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hilfsfeld um die Werbemittel zu markieren, welche in der Rechnungsstellung anhand Leistungswerte abgerechnet werde (ist für das Billing-Tool notwendig). Identifikation erfolgt anhand Datensatztyp der Werbeform, ob diese DFP ist. Wird autom. befüllt.</inlineHelpText>
        <label>Abrechnung Leistungsevaluiert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_AddressableTVProduct__c</fullName>
        <description>Ticket 04443: Formelfeld-Checkbox welche anzeigt ob es sich um ein &quot;Addressable TV&quot; Produkt handelt. Als Hilfsfeld für KEM/OKEM benötigt.</description>
        <formula>(CONTAINS(ADvendio__Ad_Type__r.Name, &apos;SwitchIn&apos;) || 
CONTAINS(ADvendio__Ad_Type__r.Name, &apos;Medium Rectangle&apos;))
&amp;&amp;  
(ADvendio__Placement__r.SomDig_Mediagattungssegment__r.Name = &apos;Connected TV/HbbTv&apos; || 
 ADvendio__Placement__r.SomDig_Mediagattungssegment__r.Name = &apos;Addressable TV&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AddressableTV-Produkt</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>